--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "uuid": "^3.3.3"
   },
   "scripts": {
-    "start": "concurrently \"yarn start:server\" \"yarn start:app\"",
+    "start": "concurrently \"npm run start:server\" \"npm run start:app\"",
     "start:app": "react-scripts start",
     "start:server": "json-server --watch db.json --port 3001 --quiet",
     "build": "react-scripts build",
